Add authorship information to each post

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 name: Madison Python Users' Group
 markdown: redcarpet
 pygments: true
+
+authors:
+  sigmavirus24:
+    name: Ian Cordasco
+
+  olooney:
+    name: Oran Looney
