Add Bill to list of authors

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ authors:
   olooney:
     name: Oran Looney
 
+  whblondeau:
+    name: Bill Blondeau
+
   # Template:
   # <github_username>:
   #   name: <your_real_name>
